Conteneur des éléments fixed + collapse DaisyUI

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,3 +15,9 @@
 .gradient-auditor {
     background-color: linear-gradient(125deg, #FF67FF 10%, #FFE27C 85%);
 }
+.bg-blue-audior {
+    background-color: #1C1354;
+}
+.text-blue-audior {
+    color: #1C1354;
+}
